[package]
name = "yarrow"
version = "0.1.0"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
keywords = ["gui", "audio"]
categories = ["gui", "visualization"]
description = "A modern retained-mode GUI library in Rust with extreme performance and control, geared towards audio software"
homepage = "https://github.com/MeadowlarkDAW/Yarrow"
documentation = "https://docs.rs/yarrow"
repository = "https://github.com/MeadowlarkDAW/Yarrow"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = [
    "default_fonts",
    "winit",
    "x11",
    "wayland",
]
## If set, Yarrow will use `include_bytes!` to bundle some fonts.
## If you plan on specifying your own fonts you may disable this feature.
default_fonts = ["epaint/default_fonts"]
## Enable the [`hex_color`] macro.
color-hex = ["yarrow_core/color-hex"]
## Enable parallel tessellation using [`rayon`](https://docs.rs/rayon).
##
## This can help performance for graphics-intense applications.
rayon = ["epaint/rayon"]
## Enables X11 support on Linux platforms
x11 = ["winit?/x11"]
## Enables Wayland support on Linux platforms
wayland = ["winit?/wayland"]
## Enables serde support for some types
serde = ["dep:serde", "yarrow_core/serde"]
## Enables using crossbeam's channel type instead of the one built
## in to the standard library.
crossbeam = ["yarrow_core/crossbeam"]

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["crates/core"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yarrow_core = { path = "crates/core" }
epaint.workspace = true
window_clipboard = "0.4.1"
#raw-window-handle = { version = "0.5.0", features = ["std"] }
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6.0" }
winit = { version = "0.30.0", optional = true, default-features = false, features = ["rwh_06"] }
baseview = { git = "https://github.com/RustAudio/baseview.git", optional = true }
wgpu = { version = "22", default-features = false, features = ["wgsl"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[workspace.dependencies]
thiserror = "1.0.61"
ahash = "0.8.11"
bitflags = "2.6.0"
thunderdome = "0.6.1"
smallvec = "1.13.2"
bytemuck = { version = "1.14.1", features = ["derive"] }
epaint = { version = "0.28.1", default-features = false, features = ["bytemuck"] }

[dev-dependencies]
wgpu = { version = "22", default-features = true }
env_logger = { version = "0.11.3", default-features = false }

