[package]
name = "yarrow"
version = "0.1.0"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
keywords = ["gui", "audio"]
categories = ["gui", "visualization"]
description = "A modern retained-mode GUI library in Rust with extreme performance and control, geared towards audio software"
homepage = "https://github.com/MeadowlarkDAW/Yarrow"
documentation = "https://docs.rs/yarrow"
repository = "https://github.com/MeadowlarkDAW/Yarrow"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
## Enables serde support for some types
serde = ["yarrow_core/serde"]
## Enables using crossbeam's channel type instead of the one built
## in to the standard library.
crossbeam = ["yarrow_core/crossbeam"]

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["crates/core"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yarrow_core = { path = "crates/core" }

[workspace.dependencies]
log = "0.4"
thiserror = "1.0.61"
ahash = "0.8.11"
bitflags = "2.6.0"
thunderdome = "0.6.1"
smallvec = "1.13.2"

[dev-dependencies]
env_logger = { version = "0.11.3", default-features = false }

