[package]
name = "yarrow"
version = "0.1.0"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
keywords = ["gui", "audio"]
categories = ["gui", "visualization"]
description = "A modern retained-mode GUI library in Rust with extreme performance and control, geared towards audio software"
homepage = "https://github.com/MeadowlarkDAW/Yarrow"
documentation = "https://docs.rs/yarrow"
repository = "https://github.com/MeadowlarkDAW/Yarrow"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = [
    "winit",
    "x11",
    "wayland",
    "winit-wayland-dlopen",
    "winit-wayland-csd-adwaita",
    "skia",
    "skia-gl",
]

winit = ["dep:yarrow_winit"]
x11 = ["yarrow_winit?/x11", "yarrow_skia?/x11"]
wayland = ["yarrow_winit?/wayland", "yarrow_skia?/wayland"]
winit-wayland-dlopen = ["yarrow_winit?/wayland-dlopen"]
winit-wayland-csd-adwaita = ["yarrow_winit?/wayland-csd-adwaita"]

skia = ["dep:yarrow_skia"]
skia-svg = ["yarrow_skia?/svg"]
skia-webp = ["yarrow_skia?/webp"]
skia-embed-freetype = ["yarrow_skia?/embed-freetype"]
skia-freetype-woff2 = ["yarrow_skia?/freetype-woff2"]
skia-gl = ["yarrow_skia?/gl", "yarrow_winit?/gl"]
skia-egl = ["yarrow_skia?/egl", "yarrow_winit?/egl"]
skia-vulkan = ["yarrow_skia?/vulkan"]
skia-metal = ["yarrow_skia?/metal"]
skia-d3d = ["yarrow_skia?/d3d"]

## Enables serde support for some types
serde = [
    "yarrow_core/serde",
    "yarrow_winit?/serde"
]
## Enables using crossbeam's channel type instead of the one built
## in to the standard library.
crossbeam = ["yarrow_core/crossbeam"]

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [
    "crates/yarrow_core",
    "crates/yarrow_skia",
    "crates/yarrow_winit"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yarrow_core = { path = "crates/yarrow_core" }
yarrow_skia = { path = "crates/yarrow_skia", default-features = false, optional = true }
yarrow_winit = { path = "crates/yarrow_winit", default-features = false, optional = true }

[workspace.dependencies]
log = "0.4"
thiserror = "1.0.61"
ahash = "0.8.11"
bitflags = "2.6.0"
thunderdome = "0.6.1"
smallvec = "1.13.2"
raw-window-handle = "0.6.2"

[dev-dependencies]
env_logger = { version = "0.11.3", default-features = false }

