[package]
name = "yarrow_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
## Enables serde support for some types
serde = ["dep:serde", "euclid/serde", "rgb/serde"]
## Enables bytemuck support for some types
bytemuck = ["euclid/bytemuck", "rgb/bytemuck"]
## Enables using crossbeam's channel type instead of the one built
## in to the standard library.
crossbeam = ["dep:crossbeam-channel"]

[dependencies]
ahash.workspace = true
bitflags.workspace = true
thunderdome.workspace = true
euclid = { version = "0.22.11" }
rgb = { version = "0.8.5", default-features = false }
keyboard-types = { version = "0.6.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
crossbeam-channel = { version = "0.5", optional = true }